--- a/style/style.css
+++ b/style/style.css
@@ -4,5 +4,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Arial", sans-serif;
+  background: yellow;
+  color: red;
 }
 /*# sourceMappingURL=style.css.map */
