--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,6 @@
           box-sizing: border-box;
   font-family: "Arial", sans-serif;
   background: yellow;
-  color: red;
+  color: aquamarine;
 }
 /*# sourceMappingURL=style.css.map */
