--- a/style/standart.css
+++ b/style/standart.css
@@ -3,8 +3,6 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Arial", sans-serif;
-  background: yellow;
-  color: red;
+  font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=standart.css.map */
