--- a/style/standart.scss
+++ b/style/standart.scss
@@ -2,7 +2,5 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Arial", sans-serif;
-    background: yellow;
-    color:red;
+    font-family: "Roboto", sans-serif;
 }
